# multi_uavs_simulator_package

./: readme.md
dependencies/src/mav_msgs/: CMakeLists.txt
src/ardupilot_sitl_gazebo_plugin/aircraft_plugin/: CMakeLists.txt
src/ardupilot_sitl_gazebo_plugin/ardupilot_sitl_gazebo_plugin/: CMakeLists.txt
src/ardupilot_sitl_gazebo_plugin/ardupilot_sitl_gazebo_plugin/include/ardupilot_sitl_gazebo_plugin/: ardupilot_sitl_gazebo_plugin.h
src/ardupilot_sitl_gazebo_plugin/ardupilot_sitl_gazebo_plugin/launch/: erlecopter_spawn.launch  iris_spawn.launch
src/ardupilot_sitl_gazebo_plugin/ardupilot_sitl_gazebo_plugin/src/: apm_plugin_gazebo_side.cpp  apm_plugin_ros_side.cpp  ardupilot_sitl_gazebo_plugin.cpp
src/ardupilot_sitl_gazebo_plugin/ardupilot_sitl_gazebo_plugin/urdf/: erlecopter_base.xacro  iris_base.xacro  multirotor_base.xacro
src/ardupilot_sitl_gazebo_plugin/ardupilot_sitl_gazebo_plugin/urdf/sensors/: lidar_sensor.urdf.xacro  sonar_sensor.urdf.xacro
src/ardupilot_sitl_gazebo_plugin/ardupilot_sitl_gazebo_plugin/worlds/empty_world/: empty.world
src/multi_uav/: CMakeLists.txt  package.xml
src/multi_uav/launch/: APF_5uav.launch  artificial_potential_field.launch  env1.launch  env2.launch  environment.launch  init.launch  leader_follower.launch  levy.launch  pid_control.launch  rc_control.launch  test_node_pub.launch  uav1_formation.launch
src/multi_uav/src/: artificial_potential_field.cpp  artificial_potential_field_5uav.cpp  formation_creating.cpp  initvel.cpp  leader_follower.cpp  levy.cpp  override.cpp  pid_controller.cpp  rotate.cpp  test_node_pub.cpp
src/multi_uav/urdf/: component_snippets.xacro  erlecopter.gv  erlecopter.xacro  erlecopter_base.urdf  erlecopter_base.xacro
src/multi_uav/urdf (复件)/: erlecopter.xacro  erlecopter_base.xacro
src/multi_uav/worlds/: empty.world
src/ros_erle_takeoff_land/src/: main.cpp
